Mon Dec 23 12:02:33 UTC 2002  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/ace_ld:
          Extended this perl script so that the location of the __ctordtor.o
          can be passed as -o command line option. The location is dependent
          on the $VDIR in the vxworks make files.

        * include/makeinclude/platform_vxworks5.x_diab.GNU:
        * include/makeinclude/platform_vxworks5.x_g++.GNU:
          When calling the ace_ld perl script, pass the $VDIR as command line option
          -o to the script.

Sun Dec 22 11:41:56 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* ace/Connector.cpp: Fixed fuzz errors.

Sun Dec 22 11:37:44 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* THANKS: Added Danile White to the hall of fame!

Sun Dec 22 11:31:53 2002  Craig Rodrigues  <crodrigu@bbn.com>

	* apps/Gateway/Gateway/Makefile:
	* apps/Gateway/Peer/Makefile: Add $(ACELIB) to $(ACE_SHLIBS) so
	  that -lACE is added to the linkline when a shared library is
	  built. Solves linking problem MacOS X. Thanks to John Zorko and
	  Daniel white <ygor@comcast.net> for pointing this out.

Sun Dec 22 10:25:35 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* ace/Connector.cpp: Fixed a warning with g++.

Sun Dec 22 09:18:00 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

       	* ace/Connector.cpp:
	* ace/Connector.h: Added a lock to the ACE_Connector class to
	  make the following atomic

	  . Registration of AST with the handler_map_
	  . Registration of the ACE_Connector with the Reactor
	  . and the registration of timers with the Reactor's timer
	    queue.

	  If they are not atomic, it throws open race conditions such as
	  the ones documented in BUG 1405. This is not complete fix for
	  BUG 1405, since it taxes applications using only one thread with a
	  lock. This is a short-term fix to prevent the race condition
	  from occuring.
